[Build] 1) Change properties to default. 2) Check custom properties if exists. 3) Clean download folder before run gulp task. 4) Change default port number to avoid port conflict. 5) Add JVM options.